Fix button alignment.

--- a/sites/all/themes/brin/sass/_buttons.scss
+++ b/sites/all/themes/brin/sass/_buttons.scss
@@ -27,6 +27,7 @@ a.button,
   margin-left: 0;
   margin-right: 16px;
   border: none;
+  vertical-align: baseline;
 
   &:link,
   &:visited,
